--- a/css/search.css
+++ b/css/search.css
@@ -74,6 +74,11 @@
 		background-position: left top;
 		background-repeat: no-repeat;
 	}
+
+	.one {
+		width: 100%;
+		height: 100%;
+	}
 }
 
 @media only screen and (orientation: portrait) and (max-device-width: 786px) {
