--- a/css/search.css
+++ b/css/search.css
@@ -62,7 +62,7 @@
 	margin-left: 15px;
 	padding-left: 5px;
 	padding-right: 5px;
-	//background-color: rgba(0, , 0, 0.8);
+	background-color: rgba(246, 195, 13, 0.7);
 	color: white;
 }
 
